--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <h1>Ahmed Fuad Hasan</h1>
                     <p>Web designer | Press and Media Secretary of University of Barishal Geophysical Socitey </p>
                     <p>Department of Geology & Mining , University of Barishal</p>
-                    <P>ahmedfuadhasan56@gmail.com | +8801740414165</p>
+                    <P>ahmedfuadhasan56@gmail.com | 01740414165</p>
                 </div>
             </div>
         </header>
@@ -171,4 +171,5 @@
 
     </div>
 </body>
+
 </html>
