--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
             <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             <a href="https://linkedin.com/in/ahmed-fuad-hasan" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
+         </footer>
 
         
 
@@ -220,5 +221,6 @@
 </body>
 
 </html>
+
 
 
