--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </section>
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
-            <a href="https://www.facebook.com/ahmed.fuad.hasan.2024?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com/ahmed.fuad.hasan.2024?mibextid=ZbWKwL" target="_blank"></i></a>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="https://github.com/Ahmed-Fuad-Hasan" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -210,6 +210,7 @@
 </body>
 
 </html>
+
 
 
 
